WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
156281
ComposedTreeIterator may crash when first child of shadow root is a comment node
https://bugs.webkit.org/show_bug.cgi?id=156281
Summary
ComposedTreeIterator may crash when first child of shadow root is a comment node
Antti Koivisto
Reported
2016-04-06 01:56:38 PDT
It should not use plain firstChild() and assume it is Element or Text.
Attachments
patch
(9.80 KB, patch)
2016-04-06 02:00 PDT
,
Antti Koivisto
kling
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2016-04-06 02:00:24 PDT
Created
attachment 275761
[details]
patch
Antti Koivisto
Comment 2
2016-04-06 02:29:49 PDT
http://trac.webkit.org/changeset/199097
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug