Source/WebCore/dom/ElementAndTextDescendantIterator.h
@@ -36,7 +36,8 @@ namespace WebCore {
 class ElementAndTextDescendantIterator {
 public:
     ElementAndTextDescendantIterator();
-    explicit ElementAndTextDescendantIterator(ContainerNode& root);
+    enum FirstChildTag { FirstChild };
+    ElementAndTextDescendantIterator(ContainerNode& root, FirstChildTag);
     ElementAndTextDescendantIterator(ContainerNode& root, Node* current);
 
     ElementAndTextDescendantIterator& operator++() { return traverseNext(); }
@@ -101,7 +102,7 @@ inline ElementAndTextDescendantIterator::ElementAndTextDescendantIterator()
 {
 }
 
-inline ElementAndTextDescendantIterator::ElementAndTextDescendantIterator(ContainerNode& root)
+inline ElementAndTextDescendantIterator::ElementAndTextDescendantIterator(ContainerNode& root, FirstChildTag)
     : m_current(firstChild(root))
 #if !ASSERT_DISABLED
     , m_assertions(m_current)
@@ -301,7 +302,7 @@ inline ElementAndTextDescendantIteratorAdapter::ElementAndTextDescendantIterator
 
 inline ElementAndTextDescendantIterator ElementAndTextDescendantIteratorAdapter::begin()
 {
-    return ElementAndTextDescendantIterator(m_root);
+    return ElementAndTextDescendantIterator(m_root, ElementAndTextDescendantIterator::FirstChild);
 }
 
 inline ElementAndTextDescendantIterator ElementAndTextDescendantIteratorAdapter::end()
